# els

./: README  setup.cfg
src/els/: __init__.py
src/els.egg-info/: PKG-INFO  SOURCES.txt
src/els/cli/: main.py
src/els/db/: milvus.py
src/els/embed/: generate.py
src/els/logging/: __init__.py  logger.py
src/els/search/: search.py
src/els/utils/: files.py  mimetype.py
src/els/utils/types/: pdf.py
utils/: testConnection.py
