[metadata]
name = els
version = 0.1.0
author = Emily M. Boudreaux
author_email = emily@boudreauxmail.com
description = Simple Program to store files in a vector database and then search for them
long_description = file: README
long_description_content_type = text/plain
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
    # List your project's dependencies here
python_requires = >=3.8

[options.packages.find]
where = src

